<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:text="@string/etiqueta_titulo_crimen"
        android:textSize="24sp"
        android:textStyle="bold"
        android:paddingBottom="8dp"/>

    <EditText
        android:id="@+id/txtTituloCrimen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:hint="@string/pista_titulo_crimen"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="20sp"
        android:paddingBottom="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:text="@string/etiqueta_detalle_crimen"
        android:textSize="24sp"
        android:textStyle="bold"
        android:paddingBottom="8dp"/>

    <Button
        android:id="@+id/btnFechaCrimen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:text="@string/pista_titulo"
        android:textSize="20sp"
        android:paddingBottom="16dp"/>
    <Button
        android:id="@+id/btnHoraCrimen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Seleccionar Hora"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:textSize="20sp"
        android:paddingBottom="16dp"/>

    <CheckBox
        android:id="@+id/chk_crimen_resuelto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/etiqueta_crimen_resuelto"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingTop="8dp"/>
</LinearLayout>
